--- a/IESA_ROOT/blog/templates/blog/htmx/comments_section.html
+++ b/IESA_ROOT/blog/templates/blog/htmx/comments_section.html
@@ -66,7 +66,9 @@
                     {% endif %}
                     
                     <div class="collapse mt-2" id="reply-form-{{ comment.pk }}">
-                        <form hx-post="{% url 'comment_create' pk=post.pk %}"
+                        <form action="{% url 'comment_create' pk=post.pk %}"
+                            hx-post="{% url 'comment_create' pk=post.pk %}"
+                            method="post"
                               hx-target="#comments-container"
                               hx-swap="innerHTML"
                                  
