✨ обильные улучшения: футер, поиск, карточки событий/постов/продуктов/галереи

--- a/IESA_ROOT/templates/base.html
+++ b/IESA_ROOT/templates/base.html
@@ -59,6 +59,7 @@
     
     <!-- Mobile Responsive Styles -->
     <link rel="stylesheet" href="{% static 'css/mobile.css' %}">
+    <link rel="stylesheet" href="{% static 'css/mobile-enhancements.css' %}">
 
 </head>
 <body>
