--- a/IESA_ROOT/templates/base.html
+++ b/IESA_ROOT/templates/base.html
@@ -60,6 +60,9 @@
     <!-- Mobile Responsive Styles -->
     <link rel="stylesheet" href="{% static 'css/mobile.css' %}">
     <link rel="stylesheet" href="{% static 'css/mobile-enhancements.css' %}">
+    
+    <!-- UNIFIED DESIGN SYSTEM - Light & Elegant Theme -->
+    <link rel="stylesheet" href="{% static 'css/unified-design.css' %}">
 
 </head>
 <body>
